Make sure custom templates with dd-hover-help status stay relative for aligning the hover icon

--- a/less/core/common.less
+++ b/less/core/common.less
@@ -298,10 +298,13 @@ div.messages {
 // Helps manipulates dd_hover to work with custom templates.
 
 .dd-hover-help {
+  position: relative;
+
   .node {
     position: static;
     margin-bottom: 0;
     overflow: inherit;
+    min-width: 0;
   }
 
   .dd-hover-expand {
